--- a/Notebooks/PowerConsumption.ipynb
+++ b/Notebooks/PowerConsumption.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -844,7 +843,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 437
         },
         "id": "dnI86-QJGeAH",
         "outputId": "72fa539d-1e98-4ec3-a478-45de5e2c16ef"
@@ -1314,7 +1313,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "SxxAbnAIU3qs",
         "outputId": "1a2ae69f-f98a-43b5-fcfe-682420c6c8a4"
       },
@@ -1370,7 +1368,7 @@
         "from torch.optim import AdamW\n",
         "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
         "\n",
-        "# Define a dummy model (Replace this with your actual model)\n",
+        "# Define a dummy model (Replace this with our actual model)\n",
         "model = torch.nn.Linear(10, 1)  # Example model with 10 input features\n",
         "\n",
         "# Define optimizer\n",
@@ -1665,7 +1663,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 544
+          "height": 564
         },
         "id": "DPpqgAN2XRPd",
         "outputId": "689214a6-4382-4fc8-bce3-351684937e5b"
@@ -1713,7 +1711,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 718
+          "height": 845
         },
         "id": "1IPJXZRiXYmR",
         "outputId": "a1462ca9-d1c9-43d8-9f5c-ac5fa4191439"
